# python

./: clientFresh.py
AutoSearchAndRecord/: hello.py  never_gonna_give_you_up.py  rand1.py
Mancala/: client.py  clientFresh.py  game.py  network.py  records.txt  server.py  serverFresh.py  test.py
Mancala/gamefiles/: client.py
Mancala/serverfiles/: server.py
Mancala2/: client.py  clientFresh.py  records.txt  serverFresh.py
Valorant_Hour_Counter/: README.md
cptr215/: fib_nums.py  firstPython.py  helping.py  testing.py  todo.txt
cptr215/in_class_code/: 3a_duplicates.py  center.py  counter.py  linked_list.py
cptr215/lab10/: tic_tac_toe.py
cptr215/lab12/: selection_sort.py  sort_user_ids.py
cptr215/lab2/: adjust_by_normal.py  brute_force.py  convert_to_binary.py  count_input_len.py  golf_scores.py  interstate_hw_nums.py
cptr215/lab3/: age_in_days.py  better_cal.py  calendar.py  day_of_week.py  leap_year.py  little_indians.py
cptr215/lab4/: fib_nums.py  name_that_num.py  remove_chars.py  sort_values.py
cptr215/lab5/: yest_tod_tom.py
cptr215/lab6/: fraction.py  fractions.py
cptr215/lab7/: baseball_counter.py
cptr215/lab8/: counter.py
cptr215/misc/: budg.py  classmethodTest.py
cptr215/project/: bible_reader.py  proposal.docx  (+2 more)
discord_bot/: blog2.html  urgh2.py
discord_qualifier/: qualifier.py
rock_paper_scissors/: network.py  server.py
savemepls/: clientFresh.py  server.py  serverFresh.py
study_scheduler/: study_timer.py
val/: stat_scraper.py
val_hour_counter/: LICENSE.txt  setup.cfg  stat_scraper.py
valorant/: stat_scraper.py
(+87 files in other folders)
