[metadata]
name = Valorant_Hour_Counter
version = 0.0.1
author = Kellen Erskine
author_email = kellenae129@gmail.com
description = I built this because I wanted to see how much of my life I have wasted in the game Valorant.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kellenerskine/python/tree/main/val-stat-scraper
classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
include_package_data = True
